--- a/styles/LeftColumn.module.css
+++ b/styles/LeftColumn.module.css
@@ -6,6 +6,7 @@
   transform-origin: 70% 70%;
   display: inline-block;
   margin-left: 10px;
+  pointer-events: none;
 }
 
 @keyframes wave-animation {
