--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#__next {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: rgb(7, 7, 7);
   color: #fff;
