add bricolage font

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: bricolage;
+  src: url("../assets/fonts/BricolageGrotesque-VariableFont_opsz\,wdth\,wght.ttf");
+}
+
 html,
 body,
 #__next {
